--- a/src/app.html
+++ b/src/app.html
@@ -4,26 +4,59 @@
   <meta charset="utf-8">
   <link rel="icon" href="/logo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Bem-vindo à MutterCorp - Buscando Soluções de Negócios e Somer uma Software House">
-  <title>Bem-vindo à MutterCorp</title>
+  <meta name="description" content="Descubra o Sexpomodoro - Um app divertido e sensual que une o método Pomodoro com posições do Kamasutra para apimentar o relacionamento a dois. Transforme o tempo em prazer!">
+  <title>Bem-vindo ao Sexpomodoro - Pomodoro com Kamasutra</title>
   
   <!-- SEO Meta Tags -->
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="Bem-vindo à MutterCorp">
-  <meta property="og:description" content="Buscando Soluções de Negócios e Software House">
+  <meta property="og:title" content="Sexpomodoro - Pomodoro com Kamasutra">
+  <meta property="og:description" content="Sexpomodoro combina produtividade e prazer: use o método Pomodoro com posições do Kamasutra. Ideal para casais que querem inovar na intimidade!">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.muttercorp.com.br">
-  <meta property="og:image" content="https://www.muttercorp.com.br/logo.png">
+  <meta property="og:url" content="https://www.sexpomodoro.com.br">
+  <meta property="og:image" content="https://www.sexpomodoro.com.br/logo.png">
   
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Bem-vindo à MutterCorp">
-  <meta name="twitter:description" content="Buscando Soluções de Negócios e Somer uma Software House">
-  <meta name="twitter:image" content="https://www.muttercorp.com.br/logo.png">
+  <meta name="twitter:title" content="Sexpomodoro - Pomodoro com Kamasutra">
+  <meta name="twitter:description" content="Use o método Pomodoro para alternar entre foco e prazer. Sexpomodoro traz desafios com posições do Kamasutra para apimentar sua rotina com leveza e diversão.">
+  <meta name="twitter:image" content="https://www.sexpomodoro.com.br/logo.png">
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/logo.png" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#000000" />
+
+	<!-- Meta Pixel Code -->
+	<script>
+		!function (f, b, e, v, n, t, s) {
+			if (f.fbq) return; n = f.fbq = function () {
+				n.callMethod ?
+					n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+			};
+			if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+			n.queue = []; t = b.createElement(e); t.async = !0;
+			t.src = v; s = b.getElementsByTagName(e)[0];
+			s.parentNode.insertBefore(t, s)
+		}(window, document, 'script',
+			'https://connect.facebook.net/en_US/fbevents.js');
+		fbq('init', '1874906106650567');
+		fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none"
+			src="https://www.facebook.com/tr?id=1874906106650567&ev=PageView&noscript=1" /></noscript>
+	<!-- End Meta Pixel Code -->
+
+
 
   %sveltekit.head%
 </head>
 <body data-sveltekit-preload-data="hover">
   <div style="display: contents">%sveltekit.body%</div>
 </body>
+</html>
+
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
